// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddressList rendering > matches the snapshot 1`] = `
<div
  class="flex flex-col gap-4"
>
  <div
    class="flex items-center justify-between"
  >
    <p
      class="text-sm text-slate-600"
    >
      Your default address is used first when you order.
    </p>
    <button
      class="rounded-box bg-palette-bg px-3 py-2 text-sm text-palette-white"
      type="button"
    >
      Add an address
    </button>
  </div>
  <ul
    class="flex flex-col gap-3"
  >
    <li>
      <div
        class="rounded-box border border-slate-200 bg-white p-4"
      >
        <div
          class="flex flex-wrap items-baseline gap-2"
        >
          <span
            class="font-medium text-palette-bg"
          >
            Home
          </span>
          <span
            class="rounded-box bg-slate-100 px-2 py-0.5 text-xs text-slate-600"
          >
            Default
          </span>
        </div>
        <p
          class="mt-1 text-sm text-slate-600"
        >
          1 Main Street, 02108 Boston (MA)
        </p>
        <div
          class="mt-3 flex flex-wrap items-center gap-4"
        >
          <button
            class="text-sm underline text-slate-600 hover:text-palette-bg"
            type="button"
          >
            Edit
          </button>
          <button
            class="text-sm underline text-slate-600 hover:text-palette-bg"
            type="button"
          >
            Delete
          </button>
        </div>
      </div>
    </li>
    <li>
      <div
        class="rounded-box border border-slate-200 bg-white p-4"
      >
        <div
          class="flex flex-wrap items-baseline gap-2"
        >
          <span
            class="font-medium text-palette-bg"
          >
            Address
          </span>
          <span
            class="text-xs text-tip"
          >
            Not placed on the map
          </span>
        </div>
        <p
          class="mt-1 text-sm text-slate-600"
        >
          5 Oak Street, 02115 Boston (MA)
        </p>
        <div
          class="mt-3 flex flex-wrap items-center gap-4"
        >
          <button
            class="text-sm underline text-slate-600 hover:text-palette-bg"
            type="button"
          >
            Make default
          </button>
          <button
            class="text-sm underline text-slate-600 hover:text-palette-bg"
            type="button"
          >
            Edit
          </button>
          <button
            class="text-sm underline text-slate-600 hover:text-palette-bg"
            type="button"
          >
            Delete
          </button>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`AddressList with nothing saved > matches the snapshot 1`] = `
<div
  class="flex flex-col gap-4"
>
  <div
    class="flex items-center justify-between"
  >
    <p
      class="text-sm text-slate-600"
    >
      You have no saved addresses yet.
    </p>
    <button
      class="rounded-box bg-palette-bg px-3 py-2 text-sm text-palette-white"
      type="button"
    >
      Add an address
    </button>
  </div>
  <ul
    class="flex flex-col gap-3"
  />
</div>
`;
